--- a/app/assets/javascripts/backbone/templates/conference/index.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/conference/index.jst.ejs
@@ -28,11 +28,102 @@
     <div id="speakers-container"></div>
     <div id="speakers-break"></div>
   </div>
-  <!-- <div class="conference-container schedule">
-      <h3><span>Schedule:</span> Feb. 23rd</h3>
-      <p>Schedule</p>
-    </div>
-    <div class="conference-container partners">
+  <div class="conference-container schedule">
+    <h3><span>Schedule:</span> Feb. 23rd</h3>
+    <table class="schedule-table">
+      <tr>
+        <td class="time">10:30 am</td>
+        <td class="border"><h4>Introduction</h4></td>
+      </tr>
+      <tr>
+        <td class="time">10:45 am</td>
+        <td class="border">
+          <h4>Session 1</h4>
+        </td>
+      </tr>
+      <tr>
+        <td class="time"></td>
+        <td>
+          <ul>
+            <li>DJ Stanfill</li>
+            <li>Jonathan Holloway</li>
+            <li>Clemantine Wamariya</li>
+            <li>Mayor John DeStefano</li>
+            <li>Shades of Yale</li>
+          </ul>
+        </td>
+      </tr>
+      <tr>
+        <td class="time">11:30 am</td>
+        <td class="border"><h4>Morning Break</h4></td>
+      </tr>
+      <tr>
+        <td class="time">11:50 am</td>
+        <td class="border">
+          <h4>Session 2</h4>
+        </td>
+      </tr>
+      <tr>
+        <td class="time"></td>
+        <td>
+          <ul>
+            <li>Ian Ayres</li>
+            <li>Sam Spaulding</li>
+            <li>Debra Fischer</li>
+            <li>Tomicah Tilleman + Ronan Farrow</li>
+            <li>Yale Dancers</li>
+          </ul>
+        </td>
+      </tr>
+    </table>
+    <table class="schedule-table">
+      <tr>
+        <td class="time">1:00 pm</td>
+        <td class="border"><h4>Lunch</h4></td>
+      </tr>
+      <tr>
+        <td class="time">2:15 pm</td>
+        <td class="border">
+          <h4>Session 3</h4>
+        </td>
+      </tr>
+      <tr>
+        <td class="time"></td>
+        <td>
+          <ul>
+            <li>Dan McKinsey</li>
+            <li>Eddy Wang</li>
+            <li>Sandra Boynton</li>
+            <li>Eddie Opara</li>
+            <li>Duke's Men of Yale</li>
+          </ul>
+        </td>
+      </tr>
+      <tr>
+        <td class="time">1:20 pm</td>
+        <td class="border"><h4>Afternoon Break</h4></td>
+      </tr>
+      <tr>
+        <td class="time">3:30 pm</td>
+        <td class="border">
+          <h4>Session 4</h4>
+        </td>
+      </tr>
+      <tr>
+        <td class="time"></td>
+        <td>
+          <ul>
+            <li>Roz Savage</li>
+            <li>Richard Prum</li>
+            <li>Cody Pomeranz</li>
+            <li>Michael Frame</li>
+          </ul>
+        </td>
+      </tr>
+    </table>
+    <div id="speakers-break"></div>
+  </div>
+  <!-- <div class="conference-container partners">
       <h3><span>The</span> Partners</h3>
       <p>Gant</p>
     </div> -->
