sponsor and session names

--- a/app/assets/javascripts/backbone/templates/conference/index.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/conference/index.jst.ejs
@@ -38,7 +38,7 @@
       <tr>
         <td class="time">10:45 am</td>
         <td class="border">
-          <h4>Session 1</h4>
+          <h4>Session 1: Hypothesize</h4>
         </td>
       </tr>
       <tr>
@@ -60,7 +60,7 @@
       <tr>
         <td class="time">11:50 am</td>
         <td class="border">
-          <h4>Session 2</h4>
+          <h4>Session 2: Experiment</h4>
         </td>
       </tr>
       <tr>
@@ -84,7 +84,7 @@
       <tr>
         <td class="time">2:15 pm</td>
         <td class="border">
-          <h4>Session 3</h4>
+          <h4>Session 3: Theorize</h4>
         </td>
       </tr>
       <tr>
@@ -106,7 +106,7 @@
       <tr>
         <td class="time">3:30 pm</td>
         <td class="border">
-          <h4>Session 4</h4>
+          <h4>Session 4: Predict</h4>
         </td>
       </tr>
       <tr>
@@ -123,10 +123,19 @@
     </table>
     <div id="speakers-break"></div>
   </div>
-  <!-- <div class="conference-container partners">
-      <h3><span>The</span> Partners</h3>
-      <p>Gant</p>
-    </div> -->
+  <div class="conference-container partners">
+    <h3><span>The</span> Partners</h3>
+    <table class="sponsors-table">
+      <tr>
+        <td class="image">
+          <img src="/assets/gant.jpeg"/>
+        </td>
+        <td class="gant">
+          GANT is a lifestyle brand, with an American sportswear heritage, offering modern high quality casual wear with a European touch. GANT’s values are based on the brand’s authentic history dating back to the company's inception in New Haven, CT in 1949. The brand has since been further developed, taking influence from Europe. This combination of influences is at the core of what GANT stands for, and is continued source of inspiration behind its key values: Integrity, Refinement, Character, Understanding, and Optimism. GANT is responsible for introducing button down collared shirts to American consumers, is credited with inventing the locker loop, and famously spread in popularity across the country through Ivy League campuses. More recently the company has revived its archival GANT Rugger label, and has launched a successful designer collaboration with Michael Bastian. GANT is considered to be one of the first great American sportswear brands, and is the epitome of contemporary American style. For more information visit http://gant.com or visit the GANT Campus Store at 268 York St in New Haven, CT.
+        </td>
+      </tr>
+    </table>
+  </div>
 </div>
 <div id="lightbox" class="hidden">
   <div id="background"></div>
