--- a/app/assets/javascripts/backbone/templates/conference/index.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/conference/index.jst.ejs
@@ -7,9 +7,9 @@
   <div class="wrapper">
     <!-- Social -->
     <div class="reserve-ticket">
-      <div class="head">Reserve Your Ticket</div>
-      <div class="sub">Buy it from a TEDxYale team member or online from the Shubert Theater</div>
-      <a href="http://purchase.tickets.com/buy/TicketPurchase?agency=TDC&pid=7422199" target="_blank"><button>Buy It here</button></a>
+      <div class="head">Unable to Attend?</div>
+      <div class="sub">We are livestreaming the entire event through Yale. </div>
+      <a href="http://www.youtube.com/watch?v=DM6xXjsPcgk" target="_blank"><button>Watch It here</button></a>
       <div class="social-bar">
         <iframe src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Ftedxyale.com%2F2013&amp;send=false&amp;layout=button_count&amp;width=150&amp;show_faces=false&amp;font&amp;colorscheme=light&amp;action=like&amp;height=21&amp;appId=203704693056770" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:90px; height:21px;" allowTransparency="true"></iframe>
           <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://tedxyale.com/2013" data-text="Join me at TEDxYale 2013 on February 23rd" data-hashtags="TEDxYaleStudentSpeakerCompetition">Tweet</a>
