--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -10,7 +10,7 @@
       %img( src="/assets/2013_header.jpg")
     %span 22 Speakers.
     %span 1 Day.
-    %a( href="/2013" class="announcement-button" ) Reserve Your Ticket Now
+    %a( href="http://www.youtube.com/watch?v=DM6xXjsPcgk" class="announcement-button" ) Watch the Livestream
   .icons
     .icon.events
       %a.symbol.events( href="/events" )
